<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/mainTabs">

    <fragment
        android:id="@+id/mainTabs"
        android:name="com.elimak.krikey.ui.maintabs.MainTabs"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_to_searchResult"
            app:destination="@+id/searchResult"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>
    <fragment
        android:id="@+id/searchResult"
        android:name="com.elimak.krikey.ui.searchresult.SearchResult"
        android:label="@string/search_result"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_searchResult_to_mainTabs"
            app:destination="@id/mainTabs"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
        <argument
            android:name="cat_id"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.elimak.krikey.ui.about.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_aboutFragment_to_mainFrag"
            app:destination="@id/mainTabs"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>
</navigation>